--- a/maven-app-cicd-demo/Jenkinsfile
+++ b/maven-app-cicd-demo/Jenkinsfile
@@ -17,12 +17,12 @@ stages{
         }
         stage('UNIT TEST') {
             steps {
-                sh 'mvn -f pom.xml test'
+                sh 'mvn -f maven-app-cicd-demo/pom.xml test'
             }
         }
         stage('Checkstyle Analysis') {
             steps {
-                sh 'mvn -f pom.xml checkstyle:checkstyle'
+                sh 'mvn -f maven-app-cicd-demo/pom.xml checkstyle:checkstyle'
             }
         }
         stage('Sonar Analysis') {
