--- a/maven-app-cicd-demo/Jenkinsfile
+++ b/maven-app-cicd-demo/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
 stages{
         stage('Build') {
             steps {
-                sh 'mvn -f pom.xml install -DskipTests'
+                sh 'mvn -f maven-app-cicd-demo/pom.xml install -DskipTests'
             }
             post {
                 success {
@@ -17,12 +17,12 @@ stages{
         }
         stage('UNIT TEST') {
             steps {
-                sh 'mvn -f pom.xml test'
+                sh 'mvn -f maven-app-cicd-demo/pom.xml test'
             }
         }
         stage('Checkstyle Analysis') {
             steps {
-                sh 'mvn -f pom.xml checkstyle:checkstyle'
+                sh 'mvn -f maven-app-cicd-demo/pom.xml checkstyle:checkstyle'
             }
         }
         stage('Sonar Analysis') {
