--- a/maven-app-cicd-demo/Jenkinsfile
+++ b/maven-app-cicd-demo/Jenkinsfile
@@ -7,6 +7,10 @@ stages{
         stage('Build') {
             steps {
                 dir('maven-app-cicd-demo'){
+                    sh '''
+                        cd maven-app-cicd-demo
+                        docker build -t my-tomcat:"$BUILD_NUMBER" .
+                        '''
                     sh 'mvn -f maven-app-cicd-demo/pom.xml install -DskipTests'
                     }
                 }    
