--- a/maven-app-cicd-demo/Jenkinsfile
+++ b/maven-app-cicd-demo/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
 stages{
         stage('Build') {
             steps {
-                    sh '''
+                    sh '''pwd && ls -l
                         docker build -t my-tomcat:"$BUILD_NUMBER" .
                         '''
                     sh 'mvn -f maven-app-cicd-demo/pom.xml install -DskipTests'
